【网站更新通知】
我们对网站进行了以下优化升级：

项目展示：每个项目现在拥有独立页面，访问更清晰
首页资讯：更新了信息展示方式，内容查找更便捷
主要改进：
✓ 项目页面独立化（如需分享可直接复制项目链接）
✓ 资讯内容加载更快
✓ 移动端浏览体验优化

温馨提示：
建议您清除浏览器缓存以查看最新效果，如有问题请联系 youmao2023@outlook.com

JetCPP
2025年6月2日20:39:00

--- a/projects.html
+++ b/projects.html
@@ -37,44 +37,15 @@
                    rel="noopener">
                    GitHub仓库
                 </a>
-                <a href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj7cc540a12607d445ea08ed3e34f81c7d1?x-cli-msg=%7B%22linkId%22%3A%221GumWstougF-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D"
+                <a href="Minecraft-Toos.html"
                    class="download-btn"
-                   download>
-                   ⬇️ 下载安装包(仅支持X64的Windows10＆Windows11)
-                </a>
-                <a href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj7397fa05b414d418db8dca902836e2778?x-cli-msg=%7B%22linkId%22%3A%221GumWstoq6E-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D"
-                   class="download-btn"
-                   download>
-                   🛜 下载.NET运行库(可选，当运行出现问题时)
-                </a>
-                <a class="download-btn"
-                   href="https://dongzheyu.github.io/Minecraft-Toos_Help.html"
                    rel="noopener"
                    target="_blank">
-                   📄 帮助文档
+                    👁️立刻查看
                 </a>
             </div>
-
-            <div class="update-log">
-                <h3>更新日志 v6.5.2</h3>
-                <ul>
-                    <li>修复部分组件在启动后会多留一个pause问题。</li>
-                    <li>新增中文日志支持。包括记录用户信息、用户操作行为以及错误信息。</li>
-                    <li>更新部分组件为最新版本，以提升性能和兼容性。</li>
-                    <li>在主页添加「查看最终用户许可协议」按钮（EULA）。</li>
-                    <li>点击可直接跳转至协议详情页面。</li>
-                </ul>
-            </div>
-            <div class="install">
-                <h2>安装提示</h2>
-                <ul>
-                    <li>请安装上面的.NET运行库，否则有些功能无法使用。（有的当我没说）</li>
-                    <li>禁止未经过作者许可复制或转发本程序任何部分！</li>
-                    <li>若然此软件引用，请加上“本文件转自<a href="https://space.bilibili.com/3546730880567808">Bilibili 我是dongle</a></li>
-                </ul>
-        </div>
     </div>
-         <div class="project-card">
+        <div class="project-card">
             <div>
                 <h2>Jetbrains Crack</h2>
                 <p>一键破解JetBrains全家桶软件，无需付费(禁止用于商业用途)</p>
@@ -89,27 +60,21 @@
                         </a>
                     </a>
                     <a>
-                        <a href="https://github.com/dongzheyu/Jetbrains-Crack/releases/download/1/jatbrains.crack.zip"
+                        <a href="Jetbrains-Crack.html"
                            class="download-btn"
-                           download>
-                            ⬇️ 下载破解工具
+                           rel="noopener"
+                           target="_blank">
+                            👁️立刻查看
                         </a>
                     </a>
-                </div>
-                <div class="update-log">
-                    <h3>更新日志v长期稳定不更新版</h3>
-                    <ul>
-                        <li>首个版本，不涉及日志</li>
-                    </ul>
                 </div>
 
             </div>
         </div>
-        <div class="project-card">
-            <div>
+            <div class="project-card">
                 <h2>JetCPP官方网站</h2>
                 <p>JetCPP官方网站</p>
-                <p>🚀 当前版本: v4.7.3</p>
+                <p>🚀 当前版本: v4.8.0</p>
                 <div class="button-group">
                     <a>
                         <a class="github-link"
@@ -118,27 +83,16 @@
                            target="_blank">
                             GitHub仓库
                         </a>
-                    </a>
-                    <a>
                         <a class="download-btn"
-                           href="https://dongzheyu.github.io"
+                           href="web.html"
                            rel="noopener"
                            target="_blank">
-                            🌐立即访问(其实已经在了)
+                            👁️立刻查看
                         </a>
                     </a>
                 </div>
-                <div class="update-log">
-                    <h3>更新日志v4.7.2</h3>
-                    <ul>
-                        <li>更新项目Minecraft-Toos</li>
-                        <li>主页资讯更新</li>
-                    </ul>
-                </div>
-
             </div>
         </div>
-    </div>
 </body>
 </html>
 <!--  _          _      ____   ____    ____
