【网站更新通知】
我们对网站进行了以下优化升级：

首页资讯：首页的资讯迁移到打开页面的弹窗里了
主要改进：
✓ Minecraft-Toos的帮助页更新
✓ 资讯内容加载更快

温馨提示：
建议您清除浏览器缓存以查看最新效果，如有问题请联系 youmao2023@outlook.com

JetCPP
2025年6月2日21:33:13

--- a/Minecraft-Toos_Help.html
+++ b/Minecraft-Toos_Help.html
@@ -27,7 +27,7 @@
         <ol>
             <li><strong>安装流程</strong>
                 <ul>
-                    <li>Windows用户运行<code>Minecraft-Toos.Set-up.exe</code></li>
+                    <li>Windows用户运行<code>Minecraft-Toos Setup.exe</code></li>
                 </ul>
             </li>
         </ol>
