--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
     </div>
 
     <div class="content">
-        <h1 class="slogan">我们的项目</h1>
+        <h1>我们的项目</h1>
 
         <div class="project-card">
             <h2>Minecraft-Tools</h2>
@@ -49,7 +49,7 @@
             <div>
                 <h2>Jetbrains Crack</h2>
                 <p>一键破解JetBrains全家桶软件，无需付费(禁止用于商业用途)</p>
-                <p>🚀 当前版本: 长期稳定不更新版</p>
+                <p>🚀 当前版本: 长期稳定版</p>
                 <div class="button-group">
                     <a>
                         <a href="https://github.com/dongzheyu/jetbrains-Crack"
@@ -71,6 +71,23 @@
 
             </div>
         </div>
+        <div class="project-card">
+            <div>
+                <h2>MinGW64一键智能部署脚本</h2>
+                <p>帮助C++开发者的一键部署MinGW64最新版脚本</p>
+                <p>🚀 当前版本: 1.0最终版本</p>
+                <div class="button-group">
+                    <a>
+                        <a class="download-btn"
+                           href="MinGW64GCCbuild.html"
+                           rel="noopener"
+                           target="_blank">
+                            👁️立刻查看
+                        </a>
+                    </a>
+                </div>
+            </div>
+            </div>
         </div>
 </body>
 </html>
