--- a/MinGW64GCCbuild.html
+++ b/MinGW64GCCbuild.html
@@ -30,7 +30,7 @@
             <div class="button-group">
                 <a>
                     <a class="download-btn"
-                       href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj7499b2a5a6dc541fea0aea0eabac51e63?x-cli-msg=%7B%22linkId%22%3A%221GumWstow5z-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D"
+                       href="https://workdrive.zohopublic.com.cn/external/e1c786a3178dca2d9e85330777f0ca760f501695562545d46b31cabce49d7de9/download"
                        rel="noopener"
                        target="_blank">
                         ⬇️立即下载
