--- a/MinGW64GCCbuild.html
+++ b/MinGW64GCCbuild.html
@@ -29,12 +29,9 @@
             <p>🚀 当前版本: 1.0最终版本</p>
             <div class="button-group">
                 <a>
-                    <a class="download-btn"
-                       href="https://workdrive.zohopublic.com.cn/external/e1c786a3178dca2d9e85330777f0ca760f501695562545d46b31cabce49d7de9/download"
-                       rel="noopener"
-                       target="_blank">
-                        ⬇️立即下载
-                    </a>
+                    <p class="download-btn">
+                        ❌维护中~
+                    </p>
                 </a>
             </div>
         </div>
