【网站更新通知】
我们对网站进行了以下优化升级：

项目页：维护项目
主要改进：
✓ 资讯内容加载更快

温馨提示：
建议您清除浏览器缓存以查看最新效果，如有问题请联系 youmao2023@outlook.com

JetCPP
2025年6月8日12:26:08

--- a/MinGW64GCCbuild.html
+++ b/MinGW64GCCbuild.html
@@ -30,7 +30,7 @@
             <div class="button-group">
                 <a>
                     <p class="download-btn">
-                        ❌维护中~
+                        ❌维护中(等几个星期)
                     </p>
                 </a>
             </div>
