--- a/index.html
+++ b/index.html
@@ -11,10 +11,12 @@
 
 <body class="index-layout">
     <nav>
-        <ul class="nav-links">
-            <li><a href="index.html">主页</a></li>
+        <ul class="desktop-nav-links">
+            <li><a class="active" href="index.html">主页</a></li>
             <li><a href="about.html">关于</a></li>
             <li><a href="projects.html">项目</a></li>
+            <!-- 新增博客链接 -->
+            <li><a href="blog.html">博客</a></li>
         </ul>
     </nav>
 
