--- a/projects.html
+++ b/projects.html
@@ -9,10 +9,12 @@
 </head>
 <body class="alt-layout">
     <nav>
-        <ul class="nav-links">
+        <ul class="desktop-nav-links">
             <li><a href="index.html">主页</a></li>
             <li><a href="about.html">关于</a></li>
-            <li><a href="projects.html">项目</a></li>
+            <li><a class="active" href="projects.html">项目</a></li>
+            <!-- 新增博客链接 -->
+            <li><a href="blog.html">博客</a></li>
         </ul>
     </nav>
 
@@ -71,24 +73,7 @@
 
             </div>
         </div>
-        <div class="project-card">
-            <div>
-                <h2>MinGW64一键智能部署脚本</h2>
-                <p>帮助C++开发者的一键部署MinGW64最新版脚本</p>
-                <p>🚀 当前版本: 1.0最终版本</p>
-                <div class="button-group">
-                    <a>
-                        <a class="download-btn"
-                           href="MinGW64GCCbuild.html"
-                           rel="noopener"
-                           target="_blank">
-                            👁️立刻查看
-                        </a>
-                    </a>
-                </div>
             </div>
-            </div>
-        </div>
 </body>
 </html>
 <!--  _          _      ____   ____    ____
