--- a/Jetbrains-Crack.html
+++ b/Jetbrains-Crack.html
@@ -9,10 +9,10 @@
 </head>
 <body class="alt-layout">
 <nav>
-    <ul class="nav-links">
+    <ul class="desktop-nav-links">
         <li><a href="index.html">主页</a></li>
         <li><a href="about.html">关于</a></li>
-        <li><a href="projects.html">项目</a></li>
+        <li><a class="active" href="projects.html">项目</a></li>
     </ul>
 </nav>
 
