【网站更新通知】
我们对网站进行了以下优化升级：

项目页：维护项目
主要改进：
✓ 添加博客网页

✓ 整体页面美化

温馨提示：
建议您清除浏览器缓存以查看最新效果，如有问题请联系 youmao2023@outlook.com

JetCPP
2025年6月8日12:26:08

--- a/Minecraft-Toos.html
+++ b/Minecraft-Toos.html
@@ -13,6 +13,7 @@
         <li><a href="index.html">主页</a></li>
         <li><a href="about.html">关于</a></li>
         <li><a class="active" href="projects.html">项目</a></li>
+        <li><a href="blog.html">博客</a></li>
     </ul>
 </nav>
 
@@ -26,7 +27,7 @@
 
     <div class="project-card">
         <h2>一款功能齐全的我的世界工具箱</h2>
-        <p>🚀 当前版本: v6.5.2 | 下载量: 15k+</p>
+        <p>🚀 当前版本: v6.6.0 | 下载量: 15k+</p>
         <div aria-label="操作按钮" class="button-group" role="group">
             <a class="github-link"
                href="https://github.com/dongzheyu/Minecraft-Toos/"
@@ -36,7 +37,7 @@
             </a>
             <a class="download-btn"
                download
-               href="https://files.zohopublic.com.cn/public/workdrive-public/download/9kwj7cc540a12607d445ea08ed3e34f81c7d1?x-cli-msg=%7B%22linkId%22%3A%221GumWstougF-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D">
+               href="https://files.zohopublic.com.cn/public/workdrive-public/download/q4a33c3752e26933a4623a4d6f207a16c3e9a?x-cli-msg=%7B%22linkId%22%3A%221GumWstoxUt-35NGn%22%2C%22isFileOwner%22%3Afalse%2C%22version%22%3A%221.0%22%2C%22isWDSupport%22%3Afalse%7D">
                 ⬇️ Windows 安装包
             </a>
             <a class="download-btn"
@@ -52,13 +53,13 @@
             </a>
         </div>
         <div class="update-log">
-            <h3>更新日志 v6.5.2</h3>
+            <h3>📝更新日志 6.6.0</h3>
             <ul>
-                <li>修复部分组件在启动后会多留一个pause问题。</li>
-                <li>新增中文日志支持。包括记录用户信息、用户操作行为以及错误信息。</li>
-                <li>更新部分组件为最新版本，以提升性能和兼容性。</li>
-                <li>在主页添加「查看最终用户许可协议」按钮（EULA）。</li>
-                <li>点击可直接跳转至协议详情页面。</li>
+                <li>删除后台功能<br>
+                    由于技术实现数量较多，已删除托盘系统及后台运行功能</li>
+                <li>自动更新检测<br>
+                    新增用户期待已久的在线更新检查功能<br>
+                    ⚠️若检测失败，建议尝试使用VPN或网络加速工具</li>
             </ul>
         </div>
         <div class="install">
@@ -66,7 +67,7 @@
             <ul>
                 <li>请安装上面的.NET运行库，否则有些功能无法使用。（有的当我没说）</li>
                 <li>禁止未经过作者许可复制或转发本程序任何部分！</li>
-                <li>若然此软件引用，请加上“本文件转自<a href="https://space.bilibili.com/3546730880567808">Bilibili 我是dongle</a></li>
+                <li>若然此软件引用，请加上“本文件转自<a href="https://space.bilibili.com/3546730880567808">bilibili 我是dongle</a></li>
             </ul>
         </div>
     </div>
