--- a/projects.html
+++ b/projects.html
@@ -29,8 +29,8 @@
 
         <div class="project-card">
             <h2>Minecraft-Tools</h2>
-            <p>一款功能齐全的我的世界工具箱</p>
-            <p>🚀 当前版本: v6.5.2 | 下载量: 15k+</p>
+            <p>Minecraft 一站式工具箱</p>
+            <p>🚀 当前版本: v6.6.0 | 下载量: 15k+</p>
 
             <div class="button-group">
                 <a href="https://github.com/dongzheyu/Minecraft-Toos/"
