--- a/projects.html
+++ b/projects.html
@@ -13,8 +13,7 @@
             <li><a href="index.html">主页</a></li>
             <li><a href="about.html">关于</a></li>
             <li><a class="active" href="projects.html">项目</a></li>
-            <!-- 新增博客链接 -->
-            <li><a href="blog.html">博客</a></li>
+            <li><a href="CPP.html">C++入门指北</a></li>
         </ul>
     </nav>
 
