--- a/CPP.html
+++ b/CPP.html
@@ -32,6 +32,9 @@
                     <li><a href="#article1">准备工作</a></li>
                     <li><a href="#article2">基础语法介绍</a></li>
                     <li><a href="#article3">简单程序</a></li>
+                    <li><a href="#article4">复习测试</a></li>
+                    <li><a href="#article5">函数</a></li>
+                    <li><a href="#article6">结构体</a></li>
                 </ul>
             </aside>
             
@@ -230,7 +233,195 @@
                     </code>
                     <p>(PS:iostream是c++标准库，用于输入输出。std是c++标准库的命名空间。输出标识符直接输入标识符名，其他需要加双引号)</p>
                     <p>这个程序，输出"Hello World!"。</p>
-                    <p>现在，你就正式入门了！</p>
+                </article>
+                <article id="article4">
+                    <h2>变量测试</h2>
+                    <h3>整数的和</h3>
+                    <p>题目描述：求3个整数的和</p>
+                    <p>输入a、b、c这3个整数，求它们的和。</p>
+                    <ul class="desktop-nav-links"><li><a href="https://ybt.ssoier.cn/problem_show.php?pid=2065">提交链接</a></li></ul>
+                    <h3>交换值</h3>
+                    <p>【题目描述】<br>
+                        输入两个正整数a和b，试交换a、b的值（使a的值等于b，b的值等于a）。</p>
+                    <p>【输入】<br>
+                        输入两个正整数a和b。<br>
+                        <br>
+                        【输出】<br>
+                        输出a与b交换值后的结果。</p>
+                    <ul class="desktop-nav-links"><li><a href="https://ybt.ssoier.cn/problem_show.php?pid=2065">提交链接</a></li></ul>
+                    <h3>买图书</h3>
+                    <pre>【题目描述】
+已知小明有n元，他买了一本书，这本书原价为m元，现在打8折出售。求小明还剩多少钱(保留2位小数)。
+
+【输入】
+输入n,m。
+
+【输出】
+小明还剩多少钱(保留2位小数)。
+
+【输入样例】
+100 100
+【输出样例】
+20.00</pre>
+                    <ul class="desktop-nav-links"><li><a href="https://ybt.ssoier.cn/problem_show.php?pid=2066">提交链接</a></li></ul>
+                    <h3>计算(a+b)×c的值</h3>
+                    <pre>【题目描述】
+给定3个整数a、b、c，计算表达式(a+b)×c的值。
+
+【输入】
+输入仅一行，包括三个整数a、b、c, 数与数之间以一个空格分开。(－10,000&lt;a,b,c<10,000)
+
+【输出】
+输出一行，即表达式的值。
+
+【输入样例】
+2 3 5
+【输出样例】
+25</pre>
+                    <ul class="desktop-nav-links"><li><a href="https://ybt.ssoier.cn/problem_show.php?pid=1007">提交链接</a></li></ul>
+                    <h3>计算(a+b)/c的值</h3>
+                    <pre>
+                        【题目描述】
+给定3个整数a、b、c，计算表达式a+bc的值。
+
+【输入】
+输入仅一行，包括三个整数a、b、c, 数与数之间以一个空格分开。(－10,000&lt;a,b,c<10,000, c不等于0)
+
+【输出】
+输出一行，即表达式的值。
+
+【输入样例】
+1 1 3
+【输出样例】
+0
+                    </pre>
+                </article>
+                <article id="article5">
+                    <h2>函数</h2>
+                    <p>函数, 函数是C++的基础，函数的格式为：</p>
+                    <pre><code>
+返回值类型 函数名(参数列表){
+函数体
+return 返回值;
+}
+                    </code>
+                    </pre>
+                    <p>函数的参数列表为函数的参数，参数列表为空时，参数列表为()。</p>
+                    <p>函数的返回值类型为函数的返回值类型，返回值类型为void时，返回值类型为()。</p>
+                    <p>返回值类型可以为int、char、float、double、string、bool、void等。</p>
+                    <p>我们可以在函数中定义变量，变量的作用域为函数内。这是局部变量</p>
+                    <p>函数的调用格式为：函数名(参数列表)</p>
+                    <p>了解了这些后，我们就可以开始编写函数了。</p>
+                    <p>简单a+b示例:</p>
+                    <pre class="cpp">
+                        #include &lt;iostream&gt;
+                        using namespace std;
+                        int add(int a, int b){
+                            return a+b;
+                        }
+                        int main(){
+                            int a, b;
+                            cin>>a>>b;
+                            cout<< add(a, b)<< endl;
+                            return 0;
+                        }
+                    </pre>
+                </article>
+                <article id="article6">
+                    <h2>结构体</h2>
+                    <p>结构体, 结构体是C++的基础，结构体的格式为：</p>
+                    <pre><code>
+struct 结构体名{
+    成员变量1;
+    成员变量2;
+    ...
+}
+                    </code>
+                    </pre>
+                    <p>结构体的成员变量为结构体的成员变量，成员变量为变量。</p>
+                    <p>我们可以在结构体中定义变量，变量的作用域为结构体内。这是局部变量</p>
+                    <p>结构体的调用格式为：结构体名.成员变量名</p>
+                    <p>了解了这些后，我们就可以开始编写结构体了。</p>
+                    <p>简单结构体示例:</p>
+                    <pre class="cpp">
+                        #include &lt;iostream&gt;
+                        using namespace std;
+                        struct Person{
+                            string name;
+                            int age;
+                            double height;
+                        }
+                        int main(){
+                            Person person;
+                            cin>>person.name>>person.age>>person.height;
+                            cout<< person.name<< " "<< person.age<< " "<< person.height<< endl;
+
+                        }
+                    </pre>
+                    <p>结构体也可以嵌套结构体。</p>
+                    <p>嵌套结构体示例:</p>
+                    <pre class="cpp">
+                        #include &lt;iostream&gt;
+                        using namespace std;
+                        struct Person{
+                            string name;
+                            int age;
+                            double height;
+                        }
+                        struct Student{
+                            Person person;
+                            int grade;
+                        }
+                        int main(){
+                            Student student;
+                            cin>>student.person.name>>student.person.age>>student.person.height>>student.grade;
+                            cout<< student.person.name<< " "<< student.person.age<< " "<< student.person.height<< " "<< student.grade<< endl;
+
+                        }
+                    </pre>
+                    <p>结构体也可以定义数组。</p>
+                    <p>结构体数组的调用格式为：结构体名[数组索引]</p>
+                    <p>了解了这些后，我们就可以开始编写结构体数组了。</p>
+                    <p>简单结构体数组示例:</p>
+                    <pre class="cpp">
+                        #include &lt;iostream&gt;
+                        using namespace std;
+                        struct Person{
+                            string name;
+                            int age;
+                            double height;
+                        }
+                        int main(){
+                            Person person[10];
+                            for(int i=0; i&lt;10; i++){
+                                cin>>person[i].name>>person[i].age>>person[i].height;
+                            }
+                            for(int i=0; i&lt;10; i++){
+                                cout<< person[i].name<< " "<< person[i].age<< " "<< person[i].height<< endl;
+                            }
+                        }
+                    </pre>
+                    <p>结构体也可以定义指针。</p>
+                    <p>结构体指针的调用格式为：结构体名*指针名</p>
+                    <p>了解了这些后，我们就可以开始编写结构体指针了。</p>
+                    <p>简单结构体指针示例:</p>
+                    <pre class="cpp">
+                        #include &lt;iostream&gt;
+                        using namespace std;
+                        struct Person{
+                            string name;
+                            int age;
+                            double height;
+                        }
+                        int main(){
+                            Person *person;
+                            person = new Person;
+                            cin>>person->name>>person->age>>person->height;
+                            cout<< person->name<< " "<< person->age<< " "<< person->height<< endl;
+                            delete person;
+                        }
+                    </pre>
+                    <h2></h2>
                 </article>
                 <!-- 更多文章... -->
             </main>
