--- a/Minecraft-Toos.html
+++ b/Minecraft-Toos.html
@@ -13,7 +13,7 @@
         <li><a href="index.html">主页</a></li>
         <li><a href="about.html">关于</a></li>
         <li><a class="active" href="projects.html">项目</a></li>
-        <li><a href="CPP.html">博客</a></li>
+        <li><a href="CPP.html">C++入门指北</a></li>
     </ul>
 </nav>
 
@@ -28,6 +28,7 @@
     <div class="project-card">
         <h2>一款功能齐全的我的世界工具箱</h2>
         <p>🚀 当前版本: v6.6.0 | 下载量: 15k+</p>
+        <p>很抱歉，当前项目开发已停止，感谢大家的支持</p>
         <div aria-label="操作按钮" class="button-group" role="group">
             <a class="github-link"
                href="https://github.com/dongzheyu/Minecraft-Toos/"
