网站更新日志：https://dongzheyu.github.io/page.html
Update Time:2025/7/28 20:05:27

--- a/page.html
+++ b/page.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <title>JetBrains-Crack</title>
-    <link href="java.png" rel="icon" type="image/png">
+    <title>JetCPP Pages</title>
+    <link href="logo.png" rel="icon" type="image/png">
     <link href="style.css" rel="stylesheet">
 </head>
 <body class="alt-layout">
@@ -14,36 +14,32 @@
         <li><a href="about.html">关于</a></li>
         <li><a class="active" href="projects.html">项目</a></li>
         <li><a href="CPP.html">C++入门指北</a></li>
-        <button class="nav-toggle" id="navToggle">↑</button>
     </ul>
+    <button class="nav-toggle" id="navToggle">↑</button>
 </nav>
 <button class="nav-show" id="navShow">↓</button>
 <div class="content">
     <div class="project-card">
-        <div>
-            <h1>JetBrains-Crack</h1>
-            <h2>一键破解JetBrains全家桶软件，无需付费(禁止用于商业用途)</h2>
-            <p>🚀 当前版本: 1.0</p>
-            <div class="button-group">
-                <a class="github-link"
-                   href="https://github.com/dongzheyu/jetbrains-Crack"
-                   rel="noopener"
-                   target="_blank">
-                    GitHub仓库
-                </a>
-                <a class="download-btn"
-                   download
-                   href="https://github.com/dongzheyu/Jetbrains-Crack/releases/download/1/jatbrains.crack.zip">
-                    ⬇️ 下载破解工具
-                </a>
-            </div>
-            <div class="update-log">
-                <h3>更新日志：</h3>
-                <ul>
-                    <li>首个版本，不涉及日志</li>
-                </ul>
-            </div>
-
+        <h1>JetCPP Pages</h1>
+        <h2>一个基于GitHub Pages的网站，用于展示工作室项目及c++学习</h2>
+        <p>🚀 当前版本: v7.3.1</p>
+        <div aria-label="操作按钮" class="button-group" role="group">
+            <a class="github-link"
+               href="https://github.com/dongzheyu/dongzheyu.github.io/"
+               rel="noopener"
+               target="_blank">
+                GitHub仓库
+            </a>
+        </div>
+        <div class="update-log">
+            <h3>📝更新日志 7.3.1</h3>
+            <ul>
+                <li>修复bug<br>
+                    修复在移动端或浏览器缩放为竖版时，导航栏会遮盖页面的内容</li>
+                <li>页面样式美化<br>
+                    替换原先纯色背景为图片，给project-card添加亚克力效果，新增project-zs效果</li>
+            </ul>
+        </div>
         </div>
     </div>
 </div>
