--- a/CPP.html
+++ b/CPP.html
@@ -15,9 +15,14 @@
             <li><a href="projects.html">项目</a></li>
             <li><a class="active" href="CPP.html">C++入门指北</a></li>
         </ul>
-        <button class="nav-toggle" id="navToggle">↑</button>
     </nav>
-    <button class="nav-show" id="navShow">↓</button>
+
+    <div class="logo-container">
+        <a href="index.html">
+            <img alt="JetCPP Logo" class="logo" src="logo.png">
+        </a>
+    </div>
+
     <div class="content">
         <div class="blog-container">
             <!-- 左侧导航栏 -->
